--- a/css/shortcode/header.css
+++ b/css/shortcode/header.css
@@ -49,10 +49,6 @@
 }
 
 
-/*----------------------------------------
-  Menu basic style
-------------------------------------------*/
-
 
 .header {
   display: flex;
@@ -193,10 +189,6 @@
   color: #bfbfbf !important;
 }
 
-
-/*-----------------------------------------
-  Sticky  For  Header
--------------------------------------------*/
 /* Styles for the sticky header when scrolled */
 .sticky__header.scroll-header {
   animation: fadeInDown 300ms ease-in-out 0s 1 normal running; /* Smooth fadeInDown animation */
@@ -253,63 +245,31 @@
   max-width: 10px;
   
 }
-
-/*-----------------------------
-  Dropdown Menu
---------------------------------*/
-.main__menu li.drop{
-    position: relative;
+.top_nav {
+  background: #000000 none repeat scroll 0 0;
+  overflow: hidden;
+  padding: 10px 0;
 }
-
-.main__menu li.drop ul.dropdown {
-  background: #ffffff none repeat scroll 0 0;
-  box-shadow: 0 0 0px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.1);
-  left: 0;
+.list-inline.info {
+  float: left;
   margin: 0;
-  opacity: 0;
-  padding: 0;
-  position: absolute;
-  top: 120%;
-  transition: all 0.2s ease-in-out 0s;
-  visibility: hidden;
-  width: 220px;
-  z-index: 999;
 }
-
-.main__menu li.drop:hover ul.dropdown {
-    opacity: 1;
-    visibility: visible;
-    top: 100%;
+.list-inline.info > li {
+  padding: 0 20px 0 0;
 }
-.main__menu ul.dropdown li {
-    border-bottom: 1px solid #f4f4f4;
-    display: block;
-    padding: 0;
+.list-inline.info a,.list-inline.social_icon a {
+  color: #fbff00f0;
+  font-family: 'futura_ltbook', sans-serif;
 }
-.main__menu ul.dropdown li a {
-    background: #ffffff none repeat scroll 0 0;
-    color: #1f2d30;
-    display: block;
-    font-size: 12px;
-    font-weight: 600;
-    padding: 12px 15px;
-    text-align: left;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: all 0.3s ease 0s;
+.list-inline.info a:hover,.list-inline.social_icon a:hover {
+  color: #ffffff;
 }
-.main__menu li.drop ul.dropdown li:hover > a {
-    background: #fafafa none repeat scroll 0 0;
-    color: #fcc236;
+.list-inline.info a .fa,.list-inline.social_icon  a .fa {
+  font-size: 20px;
+  vertical-align: text-top;
 }
-
-
-
-
-
-
-
-
-
-
+.list-inline.social_icon {
+  float: right;
+  margin: 0;
+}
 
